fix: align colors with native DevTools

--- a/src/EventPreview.css
+++ b/src/EventPreview.css
@@ -15,7 +15,7 @@
     top: 0;
     z-index: 1;
     
-    background-color: var(--background-color-accent);
+    background-color: var(--background-color-light);
     border-bottom: 1px solid var( --table-border-color);
     
     & > nav {
